--- a/tes.html
+++ b/tes.html
@@ -31,15 +31,16 @@
   }
 
   .container {
-    width: 95%;
-    max-width: 1200px;
-    margin: 15px auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    overflow-x: auto;
-    padding: 0;
-  }
+  width: 90%;
+  max-width: 1200px;
+  margin: 20px auto;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  overflow-x: auto;
+  padding: 10px;
+}
+
 
   table {
     width: 100%;
@@ -303,4 +304,5 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
