--- a/tes.html
+++ b/tes.html
@@ -31,21 +31,20 @@
   }
 
   .container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 20px auto;
+  width: 100%;
+  margin: 15px auto;
   background: white;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   overflow-x: auto;
-  padding: 10px;
+  padding: 0;
 }
 
 
   table {
     width: 100%;
     border-collapse: collapse;
-    table-layout: auto;
+    table-layout: fixed;
   }
 
   th, td {
@@ -304,5 +303,6 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
