--- a/tes.html
+++ b/tes.html
@@ -129,13 +129,34 @@
     margin-bottom: 25px;
   }
 
-  @media (max-width: 600px) {
-    .marquee { font-size: 16px; padding: 8px 0; }
-    th, td { font-size: 13px; padding: 6px 4px; }
-    h2 { font-size: 18px; }
-    .clock { font-size: 16px; }
-    .total-wrapper { flex-direction: column; align-items: flex-start; margin-left: 5%; }
+  @media (max-width: 768px) {
+  .container {
+    width: 100%;
+    margin: 10px 0;
+    border-radius: 0;
+    box-shadow: none;
   }
+
+  table {
+    font-size: 12px;
+    table-layout: auto;
+  }
+
+  th, td {
+    padding: 6px 4px;
+    word-wrap: break-word;
+  }
+
+  .marquee { font-size: 16px; padding: 8px 0; }
+  h2 { font-size: 18px; }
+  .clock { font-size: 16px; }
+  .total-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 3%;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -303,6 +324,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
