--- a/tes.html
+++ b/tes.html
@@ -13,10 +13,10 @@
   }
 
   .marquee {
-    background: #1976d2;
+    background: #006400;
     color: white;
     padding: 10px 0;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     text-align: center;
     overflow: hidden;
@@ -324,6 +324,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
