--- a/tes.html
+++ b/tes.html
@@ -54,7 +54,7 @@
   }
 
   th {
-    background: #1976d2;
+    background: #006400;
     color: white;
   }
 
@@ -324,6 +324,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
