--- a/tes.html
+++ b/tes.html
@@ -94,14 +94,14 @@
   }
 
   .total-box th {
-    background: #1976d2;
+    background: #006400;
     color: white;
     font-size: 18px;
     padding: 10px;
   }
 
   .total-box td {
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
     padding: 10px;
@@ -324,6 +324,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
