--- a/tes.html
+++ b/tes.html
@@ -217,6 +217,13 @@
         <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
       </table>
     </div>
+
+    <div class="total-box">
+      <table id="tableTotalFoam">
+        <thead><tr><th>Shift</th></tr></thead>
+        <tbody><tr><td>1</td></tr></tbody>
+      </table>
+    </div>
   </div>
 </div>
 
@@ -325,6 +332,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
