--- a/tes.html
+++ b/tes.html
@@ -204,6 +204,13 @@
 
   <!-- === DUA TABEL TOTAL KECIL (SEJAJAR KIRI) === -->
   <div class="total-wrapper">
+
+    <div class="total-box">
+      <table id="tableTotalFoam">
+        <thead><tr><th>SHIFT 1</th></tr></thead>
+      </table>
+    </div>
+    
     <div class="total-box">
       <table id="tableTotalTopper">
         <thead><tr><th>TOTAL TOPPER</th></tr></thead>
@@ -218,12 +225,7 @@
       </table>
     </div>
 
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th>Shift</th></tr></thead>
-        <tbody><tr><td>1</td></tr></tbody>
-      </table>
-    </div>
+    
   </div>
 </div>
 
@@ -332,6 +334,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
