--- a/tes.html
+++ b/tes.html
@@ -207,7 +207,8 @@
 
     <div class="total-box">
       <table id="tableTotalFoam">
-        <thead><tr><th>SHIFT 1</th></tr></thead>
+        <thead><tr><th>SHIFT</th></tr></thead>
+        <tbody><tr><td>1</td></tr></tbody>
       </table>
     </div>
     
@@ -334,6 +335,7 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
 
