--- a/tes.html
+++ b/tes.html
@@ -207,11 +207,24 @@
 
     <div class="total-box">
   <table>
-    <thead><tr><th>SHIFT</th></tr></thead>
+    <thead>
+      <tr><th>SHIFT</th></tr>
+    </thead>
     <tbody>
       <tr>
         <td>
-          <select id="shiftSelector" style="font-size:20px; padding:5px; border-radius:5px;">
+          <select id="shiftSelector" 
+            style="
+              font-size:28px;
+              font-weight:bold;
+              text-align:center;
+              width:100%;
+              border:none;
+              background:none;
+              appearance:none;
+              outline:none;
+              cursor:pointer;
+            ">
             <option value="1" selected>1</option>
             <option value="2">2</option>
           </select>
@@ -220,6 +233,7 @@
     </tbody>
   </table>
 </div>
+
 
     
     <div class="total-box">
@@ -356,6 +370,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
