--- a/shift2.html
+++ b/shift2.html
@@ -359,10 +359,10 @@ setInterval(loadSheetData, 30000);
   // === Ganti Halaman Berdasarkan Shift ===
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const value = this.value;
-  if (value === "2") {
-    window.location.href = "shift2.html"; // pindah ke halaman shift 2
+  if (value === "1") {
+    window.location.href = "tes.html"; // pindah ke halaman shift 1
   } else {
-    window.location.href = "index.html"; // balik ke shift 1
+    window.location.href = "shift2.html"; // balik ke shift 2
   }
 });
 
