--- a/tes.html
+++ b/tes.html
@@ -115,7 +115,7 @@
   }
 
   .clock {
-    text-align: center;
+    text-align: Left;
     font-size: 20px;
     color: #333;
     margin: 25px 0 5px;
@@ -370,6 +370,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
