--- a/tes.html
+++ b/tes.html
@@ -247,21 +247,12 @@
         <thead><tr><th>TOTAL FOAM</th></tr></thead>
         <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
       </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th><div class="clock" id="clock">🕒 Memuat jam...</div></th></tr></thead>
-        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
-
-    
+    </div>   
   </div>
 </div>
 
 <!-- === JAM & STATUS PEMBARUAN === -->
-
+<div class="clock" id="clock">🕒 Memuat jam...</div>
 <div class="status" id="status">⏳ Memuat data...</div>
 
 <script>
@@ -376,6 +367,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
