--- a/tes.html
+++ b/tes.html
@@ -31,15 +31,14 @@
   }
 
   .container {
-  width: 95%;
-  margin: 15px auto;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-  overflow-x: auto;
-  padding: 0;
-}
-
+    width: 95%;
+    margin: 15px auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    overflow-x: auto;
+    padding: 0;
+  }
 
   table {
     width: 100%;
@@ -72,12 +71,20 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === TABEL TOTAL KECIL DI KIRI === */
+  /* === BAGIAN TOTAL + JAM === */
+  .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 20px 3%;
+    flex-wrap: wrap;
+  }
+
   .total-wrapper {
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    margin: 20px 0 40px 3%;
+    align-items: center;
   }
 
   .total-box {
@@ -108,55 +115,73 @@
     color: #333;
   }
 
+  .total-wrapper1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    font-family: 'Segoe UI', sans-serif;
+    margin-right: 3%;
+  }
+
+  .datetime {
+    text-align: right;
+  }
+
+  #tanggal {
+    font-size: 18px;
+    font-weight: 600;
+    color: #333;
+  }
+
+  #jam {
+    font-size: 28px;
+    font-weight: bold;
+    color: #006400;
+    margin-top: 5px;
+  }
+
   .loading {
     text-align: center;
     padding: 20px;
     color: #999;
   }
 
-  .clock {
-    text-align: center;
-    font-size: 20px;
-    color: #333;
-    margin: 25px 0 5px;
-    font-weight: 500;
-  }
-
   .status {
     text-align: center;
     font-size: 14px;
     color: #444;
-    margin-bottom: 25px;
+    margin: 20px 0 25px;
   }
 
   @media (max-width: 768px) {
-  .container {
-    width: 100%;
-    margin: 10px 0;
-    border-radius: 0;
-    box-shadow: none;
-  }
+    .container {
+      width: 100%;
+      margin: 10px 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
 
-  table {
-    font-size: 12px;
-    table-layout: auto;
-  }
+    table {
+      font-size: 12px;
+      table-layout: auto;
+    }
 
-  th, td {
-    padding: 6px 4px;
-    word-wrap: break-word;
-  }
+    th, td {
+      padding: 6px 4px;
+      word-wrap: break-word;
+    }
 
-  .marquee { font-size: 16px; padding: 8px 0; }
-  h2 { font-size: 18px; }
-  .clock { font-size: 16px; }
-  .total-wrapper {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 3%;
+    .marquee { font-size: 16px; padding: 8px 0; }
+    h2 { font-size: 18px; }
+    #jam { font-size: 18px; }
+    #tanggal { font-size: 14px; }
+    .total-wrapper {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 3%;
+    }
   }
-}
-
 </style>
 </head>
 <body>
@@ -201,58 +226,64 @@
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 
-  <!-- === DUA TABEL TOTAL KECIL (SEJAJAR KIRI) === -->
-  <div class="total-wrapper">
+  <!-- === BAGIAN TOTAL DAN JAM === -->
+  <div class="top-bar">
 
-    <div class="total-box">
-  <table>
-    <thead>
-      <tr><th>SHIFT</th></tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <select id="shiftSelector" 
-            style="
-              font-size:28px;
-              font-weight:bold;
-              text-align:center;
-              width:100%;
-              border:none;
-              background:none;
-              appearance:none;
-              outline:none;
-              cursor:pointer;
-            ">
-            <option value="1" selected>1</option>
-            <option value="2">2</option>
-          </select>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <div class="total-wrapper">
+      <div class="total-box">
+        <table>
+          <thead>
+            <tr><th>SHIFT</th></tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <select id="shiftSelector" 
+                  style="
+                    font-size:28px;
+                    font-weight:bold;
+                    text-align:center;
+                    width:100%;
+                    border:none;
+                    background:none;
+                    appearance:none;
+                    outline:none;
+                    cursor:pointer;
+                  ">
+                  <option value="1" selected>1</option>
+                  <option value="2">2</option>
+                </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
+      <div class="total-box">
+        <table id="tableTotalTopper">
+          <thead><tr><th>TOTAL TOPPER</th></tr></thead>
+          <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
+        </table>
+      </div>
 
-    
-    <div class="total-box">
-      <table id="tableTotalTopper">
-        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
-      </table>
+      <div class="total-box">
+        <table id="tableTotalFoam">
+          <thead><tr><th>TOTAL FOAM</th></tr></thead>
+          <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
+        </table>
+      </div>
     </div>
 
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th>TOTAL FOAM</th></tr></thead>
-        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>   
+    <div class="total-wrapper1">
+      <div class="datetime">
+        <div id="tanggal"></div>
+        <div id="jam"></div>
+      </div>
+    </div>
   </div>
 </div>
 
-<!-- === JAM & STATUS PEMBARUAN === -->
-<div class="clock" id="clock">🕒 Memuat jam...</div>
+<!-- STATUS PEMBARUAN -->
 <div class="status" id="status">⏳ Memuat data...</div>
 
 <script>
@@ -280,7 +311,6 @@ async function loadSheetData() {
     const topperRows = rows.slice(1, 4);
     const foamRows = rows.slice(7, 12);
 
-    // === TOPPER ===
     topperRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
@@ -292,7 +322,6 @@ async function loadSheetData() {
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 90 && cleanValue > 0) {
             td.style.backgroundColor = "#ffcccc";
-            td.style.fontWeight = "bold";
             td.style.color = "#a80000";
           }
         }
@@ -301,7 +330,6 @@ async function loadSheetData() {
       topperBody.appendChild(tr);
     });
 
-    // === FOAM ===
     foamRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
@@ -313,7 +341,6 @@ async function loadSheetData() {
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 75 && cleanValue > 0) {
             td.style.backgroundColor = "#ffcccc";
-            td.style.fontWeight = "bold";
             td.style.color = "#a80000";
           }
         }
@@ -322,14 +349,13 @@ async function loadSheetData() {
       foamBody.appendChild(tr);
     });
 
-    // === TOTAL (baris 14) ===
     const totalRow = rows[14];
     if (totalRow) {
       const topperValue = totalRow[0] || "0";
       const foamValue = totalRow[1] || "0";
 
-      totalTopperBody.innerHTML = `<tr><td style="font-weight:bold;">${topperValue}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td style="font-weight:bold;">${foamValue}</td></tr>`;
+      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
     }
 
     const now = new Date();
@@ -342,11 +368,9 @@ async function loadSheetData() {
 }
 
 function updateClock() {
-  const clock = document.getElementById("clock");
   const now = new Date();
-  const waktu = now.toLocaleTimeString("id-ID", { hour12: false });
-  const tanggal = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-  clock.innerHTML = `📅 ${tanggal} | 🕒 ${waktu}`;
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
 }
 
 setInterval(updateClock, 1000);
@@ -354,35 +378,14 @@ updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
 
-  // === Ganti Halaman Berdasarkan Shift ===
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const value = this.value;
   if (value === "2") {
-    window.location.href = "shift2.html"; // ganti ke halaman shift 2
+    window.location.href = "shift2.html";
   } else {
-    window.location.href = "tes.html"; // kembali ke shift 1
+    window.location.href = "tes.html";
   }
 });
-
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
