--- a/tes.html
+++ b/tes.html
@@ -173,7 +173,8 @@
     }
 
     .marquee { font-size: 16px; padding: 8px 0; }
-    h2 { font-size: 18px; }
+    h2 { font-size: 30px;
+         text-align: center;}
     #jam { font-size: 18px; }
     #tanggal { font-size: 14px; }
     .total-wrapper {
@@ -389,3 +390,4 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
