--- a/tes.html
+++ b/tes.html
@@ -129,16 +129,17 @@
   }
 
   #tanggal {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
     color: #333;
   }
 
   #jam {
-    font-size: 28px;
+    font-size: 40px;
     font-weight: bold;
     color: #006400;
     margin-top: 5px;
+    text-align: center;
   }
 
   .loading {
@@ -390,4 +391,5 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
