--- a/shift2.html
+++ b/shift2.html
@@ -31,15 +31,14 @@
   }
 
   .container {
-  width: 95%;
-  margin: 15px auto;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-  overflow-x: auto;
-  padding: 0;
-}
-
+    width: 95%;
+    margin: 15px auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    overflow-x: auto;
+    padding: 0;
+  }
 
   table {
     width: 100%;
@@ -72,12 +71,20 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === TABEL TOTAL KECIL DI KIRI === */
+  /* === BAGIAN TOTAL + JAM === */
+  .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 20px 3%;
+    flex-wrap: wrap;
+  }
+
   .total-wrapper {
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    margin: 20px 0 40px 3%;
+    align-items: center;
   }
 
   .total-box {
@@ -108,55 +115,75 @@
     color: #333;
   }
 
+  .total-wrapper1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    font-family: 'Segoe UI', sans-serif;
+    margin-right: 3%;
+  }
+
+  .datetime {
+    text-align: right;
+  }
+
+  #tanggal {
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+  }
+
+  #jam {
+    font-size: 40px;
+    font-weight: bold;
+    color: #006400;
+    margin-top: 5px;
+    text-align: center;
+  }
+
   .loading {
     text-align: center;
     padding: 20px;
     color: #999;
   }
 
-  .clock {
-    text-align: center;
-    font-size: 20px;
-    color: #333;
-    margin: 25px 0 5px;
-    font-weight: 500;
-  }
-
   .status {
     text-align: center;
     font-size: 14px;
     color: #444;
-    margin-bottom: 25px;
+    margin: 20px 0 25px;
   }
 
   @media (max-width: 768px) {
-  .container {
-    width: 100%;
-    margin: 10px 0;
-    border-radius: 0;
-    box-shadow: none;
-  }
+    .container {
+      width: 100%;
+      margin: 10px 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
 
-  table {
-    font-size: 12px;
-    table-layout: auto;
-  }
+    table {
+      font-size: 12px;
+      table-layout: auto;
+    }
 
-  th, td {
-    padding: 6px 4px;
-    word-wrap: break-word;
-  }
+    th, td {
+      padding: 6px 4px;
+      word-wrap: break-word;
+    }
 
-  .marquee { font-size: 16px; padding: 8px 0; }
-  h2 { font-size: 18px; }
-  .clock { font-size: 16px; }
-  .total-wrapper {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 3%;
+    .marquee { font-size: 16px; padding: 8px 0; }
+    h2 { font-size: 30px;
+         text-align: center;}
+    #jam { font-size: 18px; }
+    #tanggal { font-size: 14px; }
+    .total-wrapper {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 3%;
+    }
   }
-}
-
 </style>
 </head>
 <body>
@@ -170,13 +197,12 @@
 
 <!-- === TABEL TOPPER === -->
 <div class="container">
-  <div class="clock" id="clock">🕒 Memuat jam...</div>
   <h2>TOPPER Mattress Target : 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyTopper">
@@ -192,8 +218,8 @@
   <table id="tableFoam">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyFoam">
@@ -202,59 +228,64 @@
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 
-  <!-- === DUA TABEL TOTAL KECIL (SEJAJAR KIRI) === -->
-  <div class="total-wrapper">
+  <!-- === BAGIAN TOTAL DAN JAM === -->
+  <div class="top-bar">
 
-    <div class="total-box">
-  <table>
-    <thead>
-      <tr><th>SHIFT</th></tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <select id="shiftSelector" 
-            style="
-              font-size:28px;
-              font-weight:bold;
-              text-align:center;
-              width:100%;
-              border:none;
-              background:none;
-              appearance:none;
-              outline:none;
-              cursor:pointer;
-            ">
-            <option value="1" selected>2</option>
-            <option value="2">1</option>
-          </select>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <div class="total-wrapper">
+      <div class="total-box">
+        <table>
+          <thead>
+            <tr><th>SHIFT</th></tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <select id="shiftSelector" 
+                  style="
+                    font-size:28px;
+                    font-weight:bold;
+                    text-align:center;
+                    width:100%;
+                    border:none;
+                    background:none;
+                    appearance:none;
+                    outline:none;
+                    cursor:pointer;
+                  ">
+                  <option value="2" selected>2</option>
+                  <option value="1">1</option>
+                </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-    
-    <div class="total-box">
-      <table id="tableTotalTopper">
-        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
-      </table>
+      <div class="total-box">
+        <table id="tableTotalTopper">
+          <thead><tr><th>TOTAL TOPPER</th></tr></thead>
+          <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
+        </table>
+      </div>
+
+      <div class="total-box">
+        <table id="tableTotalFoam">
+          <thead><tr><th>TOTAL FOAM</th></tr></thead>
+          <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
+        </table>
+      </div>
     </div>
 
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th>TOTAL FOAM</th></tr></thead>
-        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
-      </table>
+    <div class="total-wrapper1">
+      <div class="datetime">
+        <div id="tanggal"></div>
+        <div id="jam"></div>
+      </div>
     </div>
-
-    
   </div>
 </div>
 
-<!-- === JAM & STATUS PEMBARUAN === -->
-
+<!-- STATUS PEMBARUAN -->
 <div class="status" id="status">⏳ Memuat data...</div>
 
 <script>
@@ -282,7 +313,6 @@ async function loadSheetData() {
     const topperRows = rows.slice(1, 4);
     const foamRows = rows.slice(7, 12);
 
-    // === TOPPER ===
     topperRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
@@ -294,7 +324,6 @@ async function loadSheetData() {
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 90 && cleanValue > 0) {
             td.style.backgroundColor = "#ffcccc";
-            td.style.fontWeight = "bold";
             td.style.color = "#a80000";
           }
         }
@@ -303,7 +332,6 @@ async function loadSheetData() {
       topperBody.appendChild(tr);
     });
 
-    // === FOAM ===
     foamRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
@@ -315,7 +343,6 @@ async function loadSheetData() {
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 75 && cleanValue > 0) {
             td.style.backgroundColor = "#ffcccc";
-            td.style.fontWeight = "bold";
             td.style.color = "#a80000";
           }
         }
@@ -324,14 +351,13 @@ async function loadSheetData() {
       foamBody.appendChild(tr);
     });
 
-    // === TOTAL (baris 14) ===
     const totalRow = rows[14];
     if (totalRow) {
       const topperValue = totalRow[0] || "0";
       const foamValue = totalRow[1] || "0";
 
-      totalTopperBody.innerHTML = `<tr><td style="font-weight:bold;">${topperValue}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td style="font-weight:bold;">${foamValue}</td></tr>`;
+      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
     }
 
     const now = new Date();
@@ -344,11 +370,9 @@ async function loadSheetData() {
 }
 
 function updateClock() {
-  const clock = document.getElementById("clock");
   const now = new Date();
-  const waktu = now.toLocaleTimeString("id-ID", { hour12: false });
-  const tanggal = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-  clock.innerHTML = `📅 ${tanggal} | 🕒 ${waktu}`;
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
 }
 
 setInterval(updateClock, 1000);
@@ -356,29 +380,15 @@ updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
 
- // === Ganti Halaman Berdasarkan Shift ===
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const value = this.value;
   if (value === "1") {
-    window.location.href = "tes.html"; // pindah ke halaman shift 1
+    window.location.href = "tes.html";
   } else {
-    window.location.href = "shift2.html"; // balik ke shift 2
+    window.location.href = "shift2.html";
   }
 });
-
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
