--- a/tes.html
+++ b/tes.html
@@ -334,8 +334,10 @@
 
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang </p>
   <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
+  <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
+  <p>© Zinus Global Indonesia | Factory 2 Karawang </p>
+  
 </footer>
 
 <script>
@@ -441,3 +443,4 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
