--- a/tes.html
+++ b/tes.html
@@ -334,10 +334,7 @@
 
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
-  <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang </p>
-  
+  <p><img src="logo-zinus.png" alt="Zinus Logo" class="zinus-logo"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo"> | © Zinus Global Indonesia | Factory 2 Karawang </p>  
 </footer>
 
 <script>
@@ -443,4 +440,5 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
