--- a/tes.html
+++ b/tes.html
@@ -180,6 +180,13 @@
     transform: scale(0.8);
     animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
   }
+  .zinus-logo1 {
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+    transform: scale(0.8);
+    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
+  }
 
   @keyframes fadeZoomIn {
     0% {
@@ -334,7 +341,7 @@
 
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p><img src="logo-zinus.png" alt="Zinus Logo" class="zinus-logo"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo"> | © Zinus Global Indonesia | Factory 2 Karawang </p>  
+  <p><img src="logo-zinus.png" alt="Zinus Logo" class="zinus-logo1"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo"> | © Zinus Global Indonesia | Factory 2 Karawang </p>  
 </footer>
 
 <script>
@@ -440,5 +447,6 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
