--- a/tes.html
+++ b/tes.html
@@ -334,14 +334,16 @@
       </div>
     </div>
   </div>
-</div>
+<img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
 
-<!-- STATUS PEMBARUAN -->
+  <!-- STATUS PEMBARUAN -->
 <div class="status" id="status">⏳ Memuat data...</div>
+  
+  </div>
 
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p><img src="logo-zinus.png" alt="Zinus Logo" class="zinus-logo1"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo"> | © Zinus Global Indonesia | Factory 2 Karawang </p>  
+  <p>© Zinus Global Indonesia | Factory 2 Karawang </p>  
 </footer>
 
 <script>
@@ -447,6 +449,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
