--- a/tes.html
+++ b/tes.html
@@ -332,15 +332,12 @@
         <div id="tanggal"></div>
         <div id="jam"></div>
       </div>
+      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">    <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
     </div>
   </div>
-<img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1"> | <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
-
-  <!-- STATUS PEMBARUAN -->
-<div class="status" id="status">⏳ Memuat data...</div>
-  
   </div>
-
+<!-- STATUS PEMBARUAN -->
+<div class="status" id="status">⏳ Memuat data...</div>
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang </p>  
@@ -449,6 +446,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
