--- a/tes.html
+++ b/tes.html
@@ -118,14 +118,15 @@
   .total-wrapper1 {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center; /* tengah */
     justify-content: center;
     font-family: 'Segoe UI', sans-serif;
     margin-right: 3%;
+    text-align: center;
   }
 
   .datetime {
-    text-align: right;
+    text-align: center;
   }
 
   #tanggal {
@@ -139,50 +140,25 @@
     font-weight: bold;
     color: #006400;
     margin-top: 5px;
-    text-align: center;
   }
 
-  .loading {
-    text-align: center;
-    padding: 20px;
-    color: #999;
-  }
-
-  .status {
-    text-align: center;
-    font-size: 14px;
-    color: #444;
-    margin: 20px 0 25px;
-  }
-
-  /* === FOOTER ZINUS === */
-  .footer-zinus {
+  /* === LOGO === */
+  .logo-row {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background: #006400;
-    color: white;
-    padding: 20px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 40px;
+    gap: 15px;
+    margin-top: 10px;
   }
 
-  .footer-zinus p {
-    margin: 5px 0 15px;
-    font-size: 16px;
-    letter-spacing: 0.5px;
-  }
-
-  .zinus-logo {
-    width: 120px;
-    opacity: 0;
-    transform: scale(0.8);
-    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
-  }
-  .zinus-logo1 {
-    width: 50px;
-    height: 50px;
+  .zinus-logo, .zinus-logo1 {
+    width: 70px;
+    height: 70px;
+    background: white;
+    border-radius: 10px;
+    object-fit: contain;
+    padding: 5px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     opacity: 0;
     transform: scale(0.8);
     animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
@@ -205,35 +181,31 @@
     100% { transform: scale(1); }
   }
 
+  /* === FOOTER ZINUS === */
+  .footer-zinus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #006400;
+    color: white;
+    padding: 20px 10px;
+    border-top: 4px solid #004d00;
+    margin-top: 40px;
+  }
+
+  .footer-zinus p {
+    margin: 5px 0 15px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+  }
+
   @media (max-width: 768px) {
-    .container {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 0;
-      box-shadow: none;
-    }
-
-    table {
-      font-size: 12px;
-      table-layout: auto;
-    }
-
-    th, td {
-      padding: 6px 4px;
-      word-wrap: break-word;
-    }
-
     .marquee { font-size: 16px; padding: 8px 0; }
     h2 { font-size: 18px; }
-    #jam { font-size: 18px; }
+    #jam { font-size: 24px; }
     #tanggal { font-size: 14px; }
-    .total-wrapper {
-      flex-direction: column;
-      align-items: flex-start;
-      margin-left: 3%;
-    }
-    .footer-zinus p { font-size: 14px; }
-    .zinus-logo { width: 90px; }
+    .zinus-logo, .zinus-logo1 { width: 50px; height: 50px; }
   }
 </style>
 </head>
@@ -281,28 +253,14 @@
 
   <!-- === BAGIAN TOTAL DAN JAM === -->
   <div class="top-bar">
-
     <div class="total-wrapper">
       <div class="total-box">
         <table>
-          <thead>
-            <tr><th>SHIFT</th></tr>
-          </thead>
+          <thead><tr><th>SHIFT</th></tr></thead>
           <tbody>
             <tr>
               <td>
-                <select id="shiftSelector" 
-                  style="
-                    font-size:28px;
-                    font-weight:bold;
-                    text-align:center;
-                    width:100%;
-                    border:none;
-                    background:none;
-                    appearance:none;
-                    outline:none;
-                    cursor:pointer;
-                  ">
+                <select id="shiftSelector" style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
                   <option value="1" selected>1</option>
                   <option value="2">2</option>
                 </select>
@@ -327,20 +285,27 @@
       </div>
     </div>
 
+    <!-- Bagian jam dan logo -->
     <div class="total-wrapper1">
       <div class="datetime">
         <div id="tanggal"></div>
         <div id="jam"></div>
       </div>
-      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">    <img src="Hyundai_Logo.png" alt="Zinus Logo" class="zinus-logo">
+
+      <div class="logo-row">
+        <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+        <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+      </div>
     </div>
   </div>
-  </div>
+</div>
+
 <!-- STATUS PEMBARUAN -->
 <div class="status" id="status">⏳ Memuat data...</div>
+
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang </p>  
+  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
 <script>
@@ -374,7 +339,6 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-
         const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 90 && cleanValue > 0) {
@@ -393,7 +357,6 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-
         const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 75 && cleanValue > 0) {
@@ -410,14 +373,12 @@ async function loadSheetData() {
     if (totalRow) {
       const topperValue = totalRow[0] || "0";
       const foamValue = totalRow[1] || "0";
-
       totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
       totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
     }
 
     const now = new Date();
     status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-
   } catch (err) {
     console.error("Fetch error:", err);
     status.textContent = "⚠️ Gagal memuat data";
@@ -437,17 +398,9 @@ setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const value = this.value;
-  if (value === "2") {
-    window.location.href = "shift2.html";
-  } else {
-    window.location.href = "tes.html";
-  }
+  if (value === "2") window.location.href = "shift2.html";
+  else window.location.href = "tes.html";
 });
 </script>
 </body>
 </html>
-
-
-
-
-
