--- a/tes.html
+++ b/tes.html
@@ -249,7 +249,11 @@
       <tr><td class="loading" colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
+  <div class="footer"> Auto-refresh setiap 30 detik
+  <!-- STATUS PEMBARUAN -->
+<div class="status" id="status">⏳ Memuat data...</div>
+
+  </div>
 
   <!-- === BAGIAN TOTAL DAN JAM === -->
   <div class="top-bar">
@@ -300,8 +304,6 @@
   </div>
 </div>
 
-<!-- STATUS PEMBARUAN -->
-<div class="status" id="status">⏳ Memuat data...</div>
 
 <!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
@@ -404,3 +406,4 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
