Update and rename tes.html to index.html

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <!-- === TABEL TOPPER === -->
 <div class="container">
-  <h2>TOPPER Mattress Target : 90 Pcs/Jam</h2>
+  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
@@ -257,7 +257,7 @@
 
 <!-- === TABEL FOAM === -->
 <div class="container">
-  <h2>FOAM Mattress Target : 75 Pcs/Jam</h2>
+  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
     <thead>
       <tr>
@@ -421,9 +421,10 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
   if (value === "2") {
     window.location.href = "shift2.html";
   } else {
-    window.location.href = "tes.html";
+    window.location.href = "index.html";
   }
 });
 </script>
 </body>
 </html>
+
